# Ebac_Bookstore

./: README.md  db.sqlite3  pyproject.toml
bookstore/: apagar.py  settings.py
order/: admin.py  order.py  urls.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/models/serializers/: order_serializer.py
order/serializers/: order_serializer.py
order/tests/: __init__.py  factories.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: __init__.py  factories.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
