[tool.poetry]
name = "django-rest-twitter"
version = "0.1.0"
description = ""
authors = ["fabricol < fabricioctnmiranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.1"
factory-boy = "^3.3.0"
django = "^5.0.7"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
